fix chrome v138 layout bug

--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -40,7 +40,7 @@
   .grid-parent {
     --margin: minmax(0, 1fr);
     --gridSize: 48px;
-    --unit-size: min(var(--gridSize), calc(var(--gridSize) / 1296px * 100vw));
+    --unit-size: min(var(--gridSize), calc(48 / 1296 * 100vw));
     --gap: var(--unit-size);
     --startEndWidth: calc(23 * var(--unit-size));
 
